--- a/bathbodycare/package.json
+++ b/bathbodycare/package.json
@@ -16,6 +16,7 @@
     "font-awesome": "^4.7.0",
     "framer-motion": "^7.8.0",
     "jquery": "^3.6.2",
+    "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
